// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`reloptions.sql > line 3 1`] = `
[
  "CREATE TABLE reloptions_test(i INT) WITH (FiLLFaCToR=30,
	autovacuum_enabled = false, autovacuum_analyze_scale_factor = 0.2)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Integer": {
                      "ival": 30,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "fillfactor",
                  "location": 42,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "false",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "autovacuum_enabled",
                  "location": 58,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "Float": {
                      "fval": "0.2",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "autovacuum_analyze_scale_factor",
                  "location": 86,
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "reloptions_test",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "i",
                  "is_local": true,
                  "location": 29,
                  "typeName": {
                    "location": 31,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reloptions.sql > line 8 1`] = `
[
  "CREATE TABLE reloptions_test2(i INT) WITH (fillfactor=2)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Integer": {
                      "ival": 2,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "fillfactor",
                  "location": 43,
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "reloptions_test2",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "i",
                  "is_local": true,
                  "location": 30,
                  "typeName": {
                    "location": 32,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reloptions.sql > line 14 1`] = `
[
  "CREATE TABLE reloptions_test2(i INT) WITH (not_existing_option=2)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Integer": {
                      "ival": 2,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "not_existing_option",
                  "location": 43,
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "reloptions_test2",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "i",
                  "is_local": true,
                  "location": 30,
                  "typeName": {
                    "location": 32,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reloptions.sql > line 18 1`] = `
[
  "CREATE TABLE reloptions_test2(i INT) WITH (fillfactor=-30.1)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Float": {
                      "fval": "-30.1",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "fillfactor",
                  "location": 43,
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "reloptions_test2",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "i",
                  "is_local": true,
                  "location": 30,
                  "typeName": {
                    "location": 32,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reloptions.sql > line 28 1`] = `
[
  "CREATE TABLE reloptions_test2(i INT) WITH (fillfactor=30, fillfactor=40)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Integer": {
                      "ival": 30,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "fillfactor",
                  "location": 43,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "Integer": {
                      "ival": 40,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "fillfactor",
                  "location": 58,
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "reloptions_test2",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "i",
                  "is_local": true,
                  "location": 30,
                  "typeName": {
                    "location": 32,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reloptions.sql > line 31 1`] = `
[
  "CREATE TABLE reloptions_test2(i INT) WITH (fillfactor)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "options": [
              {
                "DefElem": {
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "fillfactor",
                  "location": 43,
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "reloptions_test2",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "i",
                  "is_local": true,
                  "location": 30,
                  "typeName": {
                    "location": 32,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reloptions.sql > line 34 1`] = `
[
  "ALTER TABLE reloptions_test SET (fillfactor=31,
	autovacuum_analyze_scale_factor = 0.3)",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "def": {
                    "List": {
                      "items": [
                        {
                          "DefElem": {
                            "arg": {
                              "Integer": {
                                "ival": 31,
                              },
                            },
                            "defaction": "DEFELEM_UNSPEC",
                            "defname": "fillfactor",
                            "location": 33,
                          },
                        },
                        {
                          "DefElem": {
                            "arg": {
                              "Float": {
                                "fval": "0.3",
                              },
                            },
                            "defaction": "DEFELEM_UNSPEC",
                            "defname": "autovacuum_analyze_scale_factor",
                            "location": 49,
                          },
                        },
                      ],
                    },
                  },
                  "subtype": "AT_SetRelOptions",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "reloptions_test",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reloptions.sql > line 39 1`] = `
[
  "ALTER TABLE reloptions_test SET (autovacuum_enabled, fillfactor=32)",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "def": {
                    "List": {
                      "items": [
                        {
                          "DefElem": {
                            "defaction": "DEFELEM_UNSPEC",
                            "defname": "autovacuum_enabled",
                            "location": 33,
                          },
                        },
                        {
                          "DefElem": {
                            "arg": {
                              "Integer": {
                                "ival": 32,
                              },
                            },
                            "defaction": "DEFELEM_UNSPEC",
                            "defname": "fillfactor",
                            "location": 53,
                          },
                        },
                      ],
                    },
                  },
                  "subtype": "AT_SetRelOptions",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "reloptions_test",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reloptions.sql > line 43 1`] = `
[
  "ALTER TABLE reloptions_test RESET (fillfactor)",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "def": {
                    "List": {
                      "items": [
                        {
                          "DefElem": {
                            "defaction": "DEFELEM_UNSPEC",
                            "defname": "fillfactor",
                            "location": 35,
                          },
                        },
                      ],
                    },
                  },
                  "subtype": "AT_ResetRelOptions",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "reloptions_test",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reloptions.sql > line 47 1`] = `
[
  "ALTER TABLE reloptions_test RESET (autovacuum_enabled,
	autovacuum_analyze_scale_factor)",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "def": {
                    "List": {
                      "items": [
                        {
                          "DefElem": {
                            "defaction": "DEFELEM_UNSPEC",
                            "defname": "autovacuum_enabled",
                            "location": 35,
                          },
                        },
                        {
                          "DefElem": {
                            "defaction": "DEFELEM_UNSPEC",
                            "defname": "autovacuum_analyze_scale_factor",
                            "location": 56,
                          },
                        },
                      ],
                    },
                  },
                  "subtype": "AT_ResetRelOptions",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "reloptions_test",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reloptions.sql > line 53 1`] = `
[
  "ALTER TABLE reloptions_test RESET (fillfactor=12)",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "def": {
                    "List": {
                      "items": [
                        {
                          "DefElem": {
                            "arg": {
                              "Integer": {
                                "ival": 12,
                              },
                            },
                            "defaction": "DEFELEM_UNSPEC",
                            "defname": "fillfactor",
                            "location": 35,
                          },
                        },
                      ],
                    },
                  },
                  "subtype": "AT_ResetRelOptions",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "reloptions_test",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reloptions.sql > line 56 1`] = `
[
  "DROP TABLE reloptions_test",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "reloptions_test",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reloptions.sql > line 58 1`] = `
[
  "CREATE TEMP TABLE reloptions_test(i INT NOT NULL, j text)
	WITH (vacuum_truncate=false,
	toast.vacuum_truncate=false,
	autovacuum_enabled=false)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "false",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "vacuum_truncate",
                  "location": 65,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "false",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "vacuum_truncate",
                  "defnamespace": "toast",
                  "location": 89,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "false",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "autovacuum_enabled",
                  "location": 119,
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 18,
              "relname": "reloptions_test",
              "relpersistence": "t",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "i",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_NOTNULL",
                        "location": 40,
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 34,
                  "typeName": {
                    "location": 36,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "j",
                  "is_local": true,
                  "location": 50,
                  "typeName": {
                    "location": 52,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reloptions.sql > line 65 1`] = `
[
  "VACUUM (FREEZE, DISABLE_PAGE_SKIPPING) reloptions_test",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "is_vacuumcmd": true,
            "options": [
              {
                "DefElem": {
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "freeze",
                  "location": 8,
                },
              },
              {
                "DefElem": {
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "disable_page_skipping",
                  "location": 16,
                },
              },
            ],
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 39,
                    "relname": "reloptions_test",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reloptions.sql > line 68 1`] = `
[
  "SELECT reloptions FROM pg_class WHERE oid =
	(SELECT reltoastrelid FROM pg_class
	WHERE oid = 'reloptions_test'::regclass)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 23,
                  "relname": "pg_class",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "reloptions",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "oid",
                        },
                      },
                    ],
                    "location": 38,
                  },
                },
                "location": 42,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "SubLink": {
                    "location": 45,
                    "subLinkType": "EXPR_SUBLINK",
                    "subselect": {
                      "SelectStmt": {
                        "fromClause": [
                          {
                            "RangeVar": {
                              "inh": true,
                              "location": 72,
                              "relname": "pg_class",
                              "relpersistence": "p",
                            },
                          },
                        ],
                        "limitOption": "LIMIT_OPTION_DEFAULT",
                        "op": "SETOP_NONE",
                        "targetList": [
                          {
                            "ResTarget": {
                              "location": 53,
                              "val": {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "String": {
                                        "sval": "reltoastrelid",
                                      },
                                    },
                                  ],
                                  "location": 53,
                                },
                              },
                            },
                          },
                        ],
                        "whereClause": {
                          "A_Expr": {
                            "kind": "AEXPR_OP",
                            "lexpr": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "oid",
                                    },
                                  },
                                ],
                                "location": 88,
                              },
                            },
                            "location": 92,
                            "name": [
                              {
                                "String": {
                                  "sval": "=",
                                },
                              },
                            ],
                            "rexpr": {
                              "TypeCast": {
                                "arg": {
                                  "A_Const": {
                                    "location": 94,
                                    "sval": {
                                      "sval": "reloptions_test",
                                    },
                                  },
                                },
                                "location": 111,
                                "typeName": {
                                  "location": 113,
                                  "names": [
                                    {
                                      "String": {
                                        "sval": "regclass",
                                      },
                                    },
                                  ],
                                  "typemod": -1,
                                },
                              },
                            },
                          },
                        },
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reloptions.sql > line 72 1`] = `
[
  "ALTER TABLE reloptions_test RESET (vacuum_truncate)",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "def": {
                    "List": {
                      "items": [
                        {
                          "DefElem": {
                            "defaction": "DEFELEM_UNSPEC",
                            "defname": "vacuum_truncate",
                            "location": 35,
                          },
                        },
                      ],
                    },
                  },
                  "subtype": "AT_ResetRelOptions",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "reloptions_test",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reloptions.sql > line 82 1`] = `
[
  "CREATE TABLE reloptions_test (s VARCHAR)
	WITH (toast.autovacuum_vacuum_cost_delay = 23)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Integer": {
                      "ival": 23,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "autovacuum_vacuum_cost_delay",
                  "defnamespace": "toast",
                  "location": 48,
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "reloptions_test",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "s",
                  "is_local": true,
                  "location": 30,
                  "typeName": {
                    "location": 32,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "varchar",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reloptions.sql > line 88 1`] = `
[
  "ALTER TABLE reloptions_test SET (toast.autovacuum_vacuum_cost_delay = 24)",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "def": {
                    "List": {
                      "items": [
                        {
                          "DefElem": {
                            "arg": {
                              "Integer": {
                                "ival": 24,
                              },
                            },
                            "defaction": "DEFELEM_UNSPEC",
                            "defname": "autovacuum_vacuum_cost_delay",
                            "defnamespace": "toast",
                            "location": 33,
                          },
                        },
                      ],
                    },
                  },
                  "subtype": "AT_SetRelOptions",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "reloptions_test",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reloptions.sql > line 91 1`] = `
[
  "ALTER TABLE reloptions_test RESET (toast.autovacuum_vacuum_cost_delay)",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "def": {
                    "List": {
                      "items": [
                        {
                          "DefElem": {
                            "defaction": "DEFELEM_UNSPEC",
                            "defname": "autovacuum_vacuum_cost_delay",
                            "defnamespace": "toast",
                            "location": 35,
                          },
                        },
                      ],
                    },
                  },
                  "subtype": "AT_ResetRelOptions",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "reloptions_test",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reloptions.sql > line 95 1`] = `
[
  "CREATE TABLE reloptions_test2 (i int) WITH (toast.not_existing_option = 42)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Integer": {
                      "ival": 42,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "not_existing_option",
                  "defnamespace": "toast",
                  "location": 44,
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "reloptions_test2",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "i",
                  "is_local": true,
                  "location": 31,
                  "typeName": {
                    "location": 33,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reloptions.sql > line 100 1`] = `
[
  "CREATE TABLE reloptions_test (s VARCHAR) WITH
	(toast.autovacuum_vacuum_cost_delay = 23,
	autovacuum_vacuum_cost_delay = 24, fillfactor = 40)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Integer": {
                      "ival": 23,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "autovacuum_vacuum_cost_delay",
                  "defnamespace": "toast",
                  "location": 48,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "Integer": {
                      "ival": 24,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "autovacuum_vacuum_cost_delay",
                  "location": 90,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "Integer": {
                      "ival": 40,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "fillfactor",
                  "location": 125,
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "reloptions_test",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "s",
                  "is_local": true,
                  "location": 30,
                  "typeName": {
                    "location": 32,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "varchar",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reloptions.sql > line 104 1`] = `
[
  "SELECT reloptions FROM pg_class WHERE oid = 'reloptions_test'::regclass",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 23,
                  "relname": "pg_class",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "reloptions",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "oid",
                        },
                      },
                    ],
                    "location": 38,
                  },
                },
                "location": 42,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 44,
                        "sval": {
                          "sval": "reloptions_test",
                        },
                      },
                    },
                    "location": 61,
                    "typeName": {
                      "location": 63,
                      "names": [
                        {
                          "String": {
                            "sval": "regclass",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reloptions.sql > line 116 1`] = `
[
  "CREATE INDEX reloptions_test_idx ON reloptions_test (s)
	WITH (not_existing_option=2)",
  {
    "stmts": [
      {
        "stmt": {
          "IndexStmt": {
            "accessMethod": "btree",
            "idxname": "reloptions_test_idx",
            "indexParams": [
              {
                "IndexElem": {
                  "name": "s",
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "ordering": "SORTBY_DEFAULT",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Integer": {
                      "ival": 2,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "not_existing_option",
                  "location": 63,
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 36,
              "relname": "reloptions_test",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reloptions.sql > line 122 1`] = `
[
  "CREATE INDEX reloptions_test_idx2 ON reloptions_test (s) WITH (fillfactor=1)",
  {
    "stmts": [
      {
        "stmt": {
          "IndexStmt": {
            "accessMethod": "btree",
            "idxname": "reloptions_test_idx2",
            "indexParams": [
              {
                "IndexElem": {
                  "name": "s",
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "ordering": "SORTBY_DEFAULT",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Integer": {
                      "ival": 1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "fillfactor",
                  "location": 63,
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 37,
              "relname": "reloptions_test",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reloptions.sql > line 126 1`] = `
[
  "ALTER INDEX reloptions_test_idx SET (fillfactor=40)",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "def": {
                    "List": {
                      "items": [
                        {
                          "DefElem": {
                            "arg": {
                              "Integer": {
                                "ival": 40,
                              },
                            },
                            "defaction": "DEFELEM_UNSPEC",
                            "defname": "fillfactor",
                            "location": 37,
                          },
                        },
                      ],
                    },
                  },
                  "subtype": "AT_SetRelOptions",
                },
              },
            ],
            "objtype": "OBJECT_INDEX",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "reloptions_test_idx",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reloptions.sql > line 130 1`] = `
[
  "CREATE INDEX reloptions_test_idx3 ON reloptions_test (s)",
  {
    "stmts": [
      {
        "stmt": {
          "IndexStmt": {
            "accessMethod": "btree",
            "idxname": "reloptions_test_idx3",
            "indexParams": [
              {
                "IndexElem": {
                  "name": "s",
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "ordering": "SORTBY_DEFAULT",
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 37,
              "relname": "reloptions_test",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
